<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/set_your_password_first"
            android:textColor="@color/txtcolor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nunito_semibold"
            android:hint="@string/enter_pin"
            android:inputType="textPassword"
            android:textColor="@color/txtcolor"
            android:textCursorDrawable="@drawable/wrongpasscolor_cursor"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/pass2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:fontFamily="@font/nunito_semibold"
            android:hint="@string/confirm_pin"
            android:inputType="textPassword"
            android:textColor="@color/txtcolor"
            android:textCursorDrawable="@drawable/color_cursor"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/savebtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass1" />

        <Button
            android:id="@+id/savebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="100dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/nunito_semibold"
            android:padding="10dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass2" />

        <com.facebook.ads.NativeAdLayout
            android:id="@+id/fl_adplaceholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/native_ads_background"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/savebtn">


        </com.facebook.ads.NativeAdLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>