<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/alarm_settings"
                android:textColor="@color/txtcolor"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/backicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_arrow_black_ios_24" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/alram_tone"
                        android:textColor="@color/txtcolor" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/changetone"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="4dp"
                        android:elevation="10dp"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:id="@+id/tonidtxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/tone_1"
                            android:textColor="@color/txtcolor"
                            app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24" />
                    </androidx.cardview.widget.CardView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/textView5"
                        android:layout_marginTop="25dp"
                        android:background="#eaeff1" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/change_your_pin"
                        android:textColor="@color/txtcolor" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/chagnepincard"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="8dp"
                        android:elevation="10dp"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="4dp"
                            android:drawablePadding="@dimen/_15sdp"
                            android:text="@string/star"
                            android:textColor="@color/txtcolor"
                            app:drawableEndCompat="@drawable/ic_rename_icon" />
                    </androidx.cardview.widget.CardView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/textView6"
                        android:layout_marginTop="25dp"
                        android:background="#eaeff1" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/vibrate_device_during_alram"
                        android:textColor="@color/txtcolor" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/vibrate_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/textView7"
                        android:layout_marginTop="25dp"
                        android:background="#eaeff1" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/flashlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/turn_on_flash_light_during_alram"
                        android:textColor="@color/txtcolor" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/flashlight_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/textView8"
                        android:layout_marginTop="25dp"
                        android:background="#eaeff1" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.facebook.ads.NativeAdLayout
            android:id="@+id/fl_adplaceholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/native_ads_background"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView8">


        </com.facebook.ads.NativeAdLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>