<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_arrow_black_ios_24" />

            <TextView
                android:id="@+id/screenlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/full_battery_alert"
                android:textColor="@color/txtcolor"
                android:textSize="16sp" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/screen_des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/this_alert_notifies_you_when_your_battery_is_fully_charged"
                    android:textAlignment="center"
                    android:textColor="@color/txtcolor"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/screen_des">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical"
                        android:paddingStart="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/switchoptionlabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                android:text="@string/activate_full_battery_alert"
                                android:textColor="@color/txtcolor" />

                            <androidx.appcompat.widget.SwitchCompat
                                android:id="@+id/option_switch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:theme="@style/fullbattery_alert_switch_theme" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_below="@+id/switchoptionlabel"
                                android:layout_marginTop="25dp"
                                android:background="#eaeff1" />
                        </RelativeLayout>

                        <Button
                            android:id="@+id/alram_seting_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:backgroundTint="#fe7905"
                            android:elevation="10dp"
                            android:text="@string/alarm_setting"
                            android:textColor="@color/white"
                            android:textSize="10sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <com.facebook.ads.NativeAdLayout
                    android:id="@+id/fl_adplaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250sdp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/native_ads_background"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView8">


                </com.facebook.ads.NativeAdLayout>

                <RelativeLayout
                    android:id="@+id/ad_loadingbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="10dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="1dp"
                        android:layout_marginEnd="1dp"
                        android:background="#d3050515"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:visibility="visible">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/loading_advertisement"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <ProgressBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginEnd="10dp"
                            android:theme="@style/CustomTheme" />
                    </LinearLayout>
                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>